--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,14 @@ enable_testing()
 
 add_executable(main main.cpp)
 
-target_include_directories(main PUBLIC "include")
+add_executable(test_cache tests/test_cache.cpp)
+
+add_library(cache src/cache.cpp)
+
+include_directories("include")
+
+target_link_libraries (main cache)
+
+target_link_libraries (test_cache cache)
+
+add_test(NAME Test_cache COMMAND test_cache)
