--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ add_executable(main main.cpp)
 
 add_executable(test_cache tests/test_cache.cpp)
 
+add_executable(cacheIdeal src/cache_ideal.cpp)
+
 add_library(cache src/cache.cpp)
 
 include_directories("include")
@@ -15,5 +17,6 @@ include_directories("include")
 target_link_libraries (main cache)
 
 target_link_libraries (test_cache cache)
+target_link_libraries (cacheIdeal cache)
 
 add_test(NAME Test_cache COMMAND test_cache)
